@@ -63,12 +63,10 @@ bool Point<dim>::isEqualTo(const Point<dim> &rhs, double tolerance) const
 template<const int dim>
 Vector<dim> operator-(const Point<dim>& c1, const Point<dim>& c2)
 {
-  // FIXME friend of vector
-
   Vector<dim> out;
 
   for(int i = 0; i < dim; ++i)
-    out[i] = FloatSubtract(c1.m_elem[i], c2.m_elem[i]);
+    out.m_elem[i] = FloatSubtract(c1.m_elem[i], c2.m_elem[i]);
 
   return out;
 }
@@ -76,12 +74,10 @@ Vector<dim> operator-(const Point<dim>& c1, const Point<dim>& c2)
 template<const int dim>
 Point<dim> operator+(const Point<dim>& c, const Vector<dim>& v)
 {
-  // FIXME friend of vector
-
   Point<dim> out;
 
   for(int i = 0; i < dim; ++i)
-    out.m_elem[i] = FloatAdd(c.m_elem[i], v[i]);
+    out.m_elem[i] = FloatAdd(c.m_elem[i], v.m_elem[i]);
 
   return out;
 }
@@ -89,12 +85,10 @@ Point<dim> operator+(const Point<dim>& c, const Vector<dim>& v)
 template<const int dim>
 Point<dim> operator-(const Point<dim>& c, const Vector<dim>& v)
 {
-  // FIXME friend of vector
-
   Point<dim> out;
 
   for(int i = 0; i < dim; ++i)
-    out.m_elem[i] = FloatSubtract(c.m_elem[i], v[i]);
+    out.m_elem[i] = FloatSubtract(c.m_elem[i], v.m_elem[i]);
 
   return out;
 }
@@ -102,12 +96,10 @@ Point<dim> operator-(const Point<dim>& c, const Vector<dim>& v)
 template<const int dim>
 Point<dim> operator+(const Vector<dim>& v, const Point<dim>& c)
 {
-  // FIXME friend of vector
-
   Point<dim> out;
 
   for(int i = 0; i < dim; ++i)
-    out.m_elem[i] = FloatAdd(c.m_elem[i], v[i]);
+    out.m_elem[i] = FloatAdd(c.m_elem[i], v.m_elem[i]);
 
   return out;
 }
@@ -136,25 +128,21 @@ Point<dim>& Point<dim>::operator=(const CoordType d[dim])
 }
 
 template<const int dim>
-Point<dim>& Point<dim>::operator+=(const Vector<dim> &rhs)
+Point<dim>& operator+=(Point<dim>& p, const Vector<dim> &rhs)
 {
-  // FIXME friend of vector
-
     for(int i = 0; i < dim; ++i)
-      m_elem[i] = FloatAdd(m_elem[i], rhs[i]);
+      p.m_elem[i] = FloatAdd(p.m_elem[i], rhs.m_elem[i]);
 
-    return *this;
+    return p;
 }
 
 template<const int dim>
-Point<dim>& Point<dim>::operator-=(const Vector<dim> &rhs)
+Point<dim>& operator-=(Point<dim>& p, const Vector<dim> &rhs)
 {
-  // FIXME friend of vector
-
     for(int i = 0; i < dim; ++i)
-      m_elem[i] = FloatSubtract(m_elem[i], rhs[i]);
+      p.m_elem[i] = FloatSubtract(p.m_elem[i], rhs.m_elem[i]);
 
-    return *this;
+    return p;
 }
 
 // Pointinate comparison operator, most likely only used for sorting
