@@ -39,8 +39,10 @@ class Quaternion
   Quaternion () {}
   Quaternion (const CoordType w_in, const CoordType x_in, const CoordType y_in,
 	      const CoordType z_in);
-  Quaternion (const CoordType pitch, const CoordType roll, const CoordType yaw)
-	{fromEuler(pitch, roll, yaw);}
+  Quaternion (const CoordType alpha, const CoordType beta, const CoordType gamma)
+	{fromEuler(alpha, beta, gamma);}
+  Quaternion (int axis, const CoordType angle)
+	{rotation(axis, angle);}
   Quaternion (const Vector<3>& axis, const CoordType angle)
 	{rotation(axis, angle);}
   Quaternion (const Quaternion& p) : m_w(p.m_w), m_vec(p.m_vec) {}
@@ -77,15 +79,18 @@ class Quaternion
   // Returns "not_flip", similar to RotMatrix<>.toEuler()
   bool fromRotMatrix(const RotMatrix<3>& m);
 
+  Quaternion& rotation(int axis, const CoordType angle);
   Quaternion& rotation(const Vector<3>& axis, const CoordType angle);
 
-  Quaternion& fromEuler(const CoordType pitch, const CoordType roll,
-			const CoordType yaw);
+  Quaternion& fromEuler(const CoordType alpha, const CoordType beta,
+			const CoordType gamma);
+  void toEuler(CoordType& alpha, CoordType& beta, CoordType& gamma);
 
   template<const int dim>
   friend Vector<3>& Vector<dim>::rotate(const Quaternion& q);
   template<const int dim>
-  friend RotMatrix<dim>::RotMatrix(const Quaternion& q, const bool not_flip);
+  friend RotMatrix<3>& RotMatrix<dim>::fromQuaternion(const Quaternion& q,
+						      const bool not_flip);
 
   CoordType scalar() const		{return m_w;}
   const Vector<3>& vector() const	{return m_vec;}
